syntax = "proto3";

option go_package = "./;pb";

message Request {
    oneof request {
        PutRequest putRequest= 1;
        GetRequest getRequest= 2;
    }
}

message Response {
    oneof response {
        PutResponse putResponse= 1;
        GetResponse getResponse= 2;
    }
}

enum FileType {
    CustomData = 0;
    IdleData = 1;
    IdleMu = 2;
    CustomMu = 3;
    Tag = 4;
}

// a protocol define a set of reuqest and responses
message PutRequest {
    FileType Type = 1;
    string Hash = 2;
    uint64 Size = 3;
    bytes Data = 4;
}
message PutResponse {
    // Code indicates the result of this transfer
    uint32 Code = 1;
}

message GetRequest {
    FileType Type = 1;
    string Hash = 2;
}

message GetResponse {
    uint32 Code = 1;
    uint64 Size = 2;
    bytes Data = 3;
}